show other groups on the side

--- a/src/index.css
+++ b/src/index.css
@@ -61,3 +61,6 @@ a.support-group {
 .support-group:hover > .mycard {
   background-color: whitesmoke;
 }
+.support-group:hover > .card {
+  background-color: whitesmoke;
+}
